# dsmr-parse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dsmr-parse.yml
src/: lib.rs  line_reader.rs  telegram.rs  tst.rs  unit_value.rs
src/telegram/: error.rs
tests/: telegram.rs  telegram.txt  telegram2.txt  telegram3.txt  tst.rs
