[package]
name = "dsmr-parse"
version = "0.4.0"
edition = "2024"
description = "Library for parsing DSMR telegrams"
keywords = ["dsmr", "energy", "netherlands", "electricity", "automation"]
categories = ["parser-implementations", "encoding"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = ["crates-local"]
documentation = "https://docs.rs/dsmr-parse"
repository = "https://github.com/twistedfall/dsmr-parse"
exclude = ["/.github", "/tools", "/docs", ".gitignore", "release.toml", "rustfmt.toml"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
jiff = ["dep:jiff"]
chrono = ["dep:chrono"]

[dependencies]
crc16 = "0.4"
chrono = { version = "0.4", default-features = false, optional = true }
jiff = { version = "0.2", default-features = false, optional = true }
log = "0.4"

[dev-dependencies]
matches = "0.1"
jiff = { version = "0.2", default-features = false, features = ["tzdb-zoneinfo"] }
serialport = "4"
